feat: add list function

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "add-build": "git add dist"
   },
   "dependencies": {
+    "@project-serum/anchor": "^0.25.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
